Implentation of the rules in JS and updated some syles in CSS

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <div id="container">
       <h1>Dice Roller</h1>
       <label># of Dice</label>
-      <input type="number" min="1" />
+      <input type="number" id="numOfDices" min="1" />
       <button onclick="rollDice()">Roll Dice</button>
       <div id="diceResult"></div>
       <div id="diceImages"></div>
